# phconvert

./: .gitattributes  .gitignore  .readthedocs.yaml  .travis.yml  Convert Becker-Hickl to Photon-HDF5.ipynb  Convert HT3 to Photon-HDF5.ipynb  Convert SM to Photon-HDF5.ipynb  Convert ns-ALEX Becker-Hickl files to Photon-HDF5.ipynb  Convert ns-ALEX HT3 files to Photon-HDF5.ipynb  Convert us-ALEX SM files to Photon-HDF5.ipynb  LICENSE.txt  MANIFEST.in  Photon-HDF5 JSON description.ipynb  README.md  _config.yml  appveyor.yml  index.html  index.md  packaging.md  params.json  pyproject.toml  setup.cfg  setup.py  versioneer.py
conda.recipe/: meta.yaml
core/: hdf5.py  loader.py  smreader.py
docs/: Build docs.ipynb  Makefile  bhreader.rst  conf.py  hdf5.rst  helperfuncs.rst  index.rst  loader.rst  plotter.rst  pqreader.rst  readthedocs.py  requirements.txt
notebooks/: 7.Convert pt3 files to Photon-HDF5.ipynb  7.Convert t3r files to Photon-HDF5.ipynb  Convert PicoQuant ns-ALEX files to Photon-HDF5.ipynb  Convert ns-ALEX Becker-Hickl files to Photon-HDF5.ipynb  Convert ns-ALEX HT3 files to Photon-HDF5.ipynb  Convert ns-ALEX PT3 files to Photon-HDF5.ipynb  Convert ns-ALEX T3R files to Photon-HDF5.ipynb  Convert ns-ALEX pt3 files to Photon-HDF5.ipynb  Convert ns-ALEX t3r files to Photon-HDF5.ipynb  Convert pt3 files to Photon-HDF5.ipynb  Convert t3r files to Photon-HDF5.ipynb  Convert us-ALEX SM files to Photon-HDF5 - YAML.ipynb  Convert us-ALEX SM files to Photon-HDF5.ipynb  Example reading PicoQuant PHU files.ipynb  Load-PTU.ipynb  Load-SM.ipynb  Load-SPC-Copy1.ipynb  Load-SPC.ipynb  Photon-HDF5 JSON description.ipynb  Upload data files.ipynb  Writing Photon-HDF5 files.ipynb
phconvert/: __init__.py  _time_conversion.py  _version.py  bhreader.py  hdf5.py  helperfuncs.py  loader.py  metadata.py  plotter.py  pqreader.py  (+4 more)
(+19 files in other folders)
