[build-system]
requires = [
    "setuptools>=64", "setuptools_scm"
    ]
build-backend = "setuptools.build_meta"

[project]
name = "phconvert"
dynamic = ["version", ]
authors = [
    {name="Antonino Ingargiola", email="tritemio@gmail.com"}, 
    {name="Paul David Harris", email="harripd@gmail.com"}
    ]
maintainers = [{name="Paul David Harris", email="harripd@gmail.com"}, ]
description = "Convert Beker&Hickl, PicoQuant and other formats to Photon-HDF5."
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = [
    "single-molecule FRET", 
    "smFRET", 
    "biophysics", 
    "file-format", 
    "HDF5", 
    "Photon-HDF5"
    ]
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    ]
requires-python = ">= 3.6"
dependencies = [
    "numpy>=1.19",
    "tables",
    'importlib_resources;python_version<="3.10"'
    ]

[project.urls]
Homepage = "http://photon-hdf5.github.io/phconvert/"
Documentation = "https://phconvert.readthedocs.io/en/latest/"
Repositories = "https://github.com/Photon-HDF5/phconvert"
Issues = "https://github.com/Photon-HDF5/phconvert/issues"

[tool.setuptools.packages.find]
include = ['phconvert*']

[tool.setuptools.package-data]
"phconvert.specs" = ["*.json",]
"phconvert.v04.specs" = ["*.json",]

[tool.setuptools_scm]
version_scheme = "post-release"
write_to = "phconvert/_version.py"
